cudaq/test/Transforms/qir_profile_mapped_offsets_errors.qke
// ========================================================================== //
// Copyright (c) 2026 NVIDIA Corporation & Affiliates.                        //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: cudaq-opt --qir-profile-prep --quake-to-qir-func %s -verify-diagnostics

llvm.func @duplicate_ref_offsets() attributes {passthrough = ["entry_point"]} {
  %0 = llvm.call @__quantum__rt__qubit_allocate() {StartingOffset = 2 : i64} : () -> !llvm.ptr
  // expected-error @+1 {{overlaps physical qubit id 2}}
  %1 = llvm.call @__quantum__rt__qubit_allocate() {StartingOffset = 2 : i64} : () -> !llvm.ptr
  llvm.call @__quantum__qis__x(%0) : (!llvm.ptr) -> ()
  llvm.call @__quantum__qis__x(%1) : (!llvm.ptr) -> ()
  llvm.return
}

llvm.func @overlapping_vector_offsets() attributes {passthrough = ["entry_point"]} {
  %0 = llvm.mlir.constant(3 : i64) : i64
  %1 = llvm.call @__quantum__rt__qubit_allocate_array(%0) {StartingOffset = 1 : i64} : (i64) -> !llvm.ptr
  %2 = llvm.mlir.constant(2 : i64) : i64
  // expected-error @+1 {{overlaps physical qubit id 3}}
  %3 = llvm.call @__quantum__rt__qubit_allocate_array(%2) {StartingOffset = 3 : i64} : (i64) -> !llvm.ptr
  llvm.call @__quantum__rt__array_release(%1) : (!llvm.ptr) -> ()
  llvm.call @__quantum__rt__array_release(%3) : (!llvm.ptr) -> ()
  llvm.return
}

llvm.func @__quantum__rt__qubit_allocate() -> !llvm.ptr
llvm.func @__quantum__rt__qubit_allocate_array(i64) -> !llvm.ptr
llvm.func @__quantum__rt__array_release(!llvm.ptr)
llvm.func @__quantum__qis__x(!llvm.ptr)
